--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^5.0.1",
     "react-qr-code": "^2.0.12",
     "react-scripts": "5.0.1",
+    "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
